--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/views/home.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/minihome/main.jsp=UTF-8
+encoding//src/main/webapp/resources/sounds/\uBC84\uC988-\uAC00\uC2DC.mp3=UTF-8
+encoding/<project>=UTF-8
