--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,13 @@
 			</exclusions>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<!-- json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20210307</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.lazyluke</groupId>
