--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,10 @@
 		</listener-class>
 	</listener>
 
+	<listener>
+    	<listener-class>com.core.tjoeun.util.SessionListener</listener-class>
+	</listener>
+	
 	<!-- The definition of the Root Spring Container shared by all Servlets 
 		and Filters -->
 	<context-param>
